Added basic Aiff supported. Might not be stable yet.

--- a/CSCore.Test/Properties/Resources.resx
+++ b/CSCore.Test/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="aiff_50s_sine" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\50s_sine.aiff;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="test_120s_stereo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\test_120s_stereo.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
